src/mafralang.output
Estado 42 conflitos: 1 de deslocamento/redução
Estado 50 conflitos: 1 de deslocamento/redução
Estado 232 conflitos: 1 de deslocamento/redução
Estado 240 conflitos: 1 de deslocamento/redução


Gramática

    0 $accept: program $end

    1 program: declarations

    2 declarations: declarations declaration
    3             | declaration

    4 declaration: var_declaration
    5            | func_declaration

    6 var_declaration: TYPE ID SEMICOLON

    7 func_declaration: TYPE ID LEFT_PARENTHESES paramaters RIGHT_PARENTHESES compound_statement

    8 paramaters: paramaters COMMA paramater
    9           | paramater
   10           | %empty

   11 paramater: TYPE ID

   12 block_struct: compound_statement
   13             | block_statement

   14 compound_statement: LEFT_CURLY_BRACKET statement_list RIGHT_CURLY_BRACKET

   15 statement_list: statement_list block_statement
   16               | block_statement

   17 block_statement: var_declaration
   18                | set_statement SEMICOLON
   19                | statement
   20                | return_statement
   21                | input_statement SEMICOLON
   22                | output_statement SEMICOLON
   23                | function_call SEMICOLON

   24 function_call: ID LEFT_PARENTHESES local_parameters RIGHT_PARENTHESES

   25 input_statement: READ LEFT_PARENTHESES variable RIGHT_PARENTHESES

   26 output_statement: WRITE LEFT_PARENTHESES variable RIGHT_PARENTHESES
   27                 | WRITELN LEFT_PARENTHESES variable RIGHT_PARENTHESES

   28 return_statement: RETURN LEFT_PARENTHESES expression RIGHT_PARENTHESES SEMICOLON
   29                 | RETURN expression SEMICOLON

   30 statement: expression_statement
   31          | conditional_statement
   32          | iteration_statement

   33 expression_statement: expression SEMICOLON

   34 conditional_statement: IF LEFT_PARENTHESES expression RIGHT_PARENTHESES block_struct
   35                      | IF LEFT_PARENTHESES expression RIGHT_PARENTHESES block_struct ELSE block_struct

   36 iteration_statement: FOR LEFT_PARENTHESES expression SEMICOLON expression SEMICOLON expression RIGHT_PARENTHESES block_struct
   37                    | FORALL LEFT_PARENTHESES set_expression RIGHT_PARENTHESES block_struct

   38 set_statement: is_set_statement
   39              | remove_statement
   40              | add_statement
   41              | exists_statement

   42 is_set_statement: IS_SET LEFT_PARENTHESES ID RIGHT_PARENTHESES

   43 remove_statement: REMOVE LEFT_PARENTHESES set_expression RIGHT_PARENTHESES

   44 add_statement: ADD LEFT_PARENTHESES set_expression RIGHT_PARENTHESES

   45 exists_statement: EXISTS LEFT_PARENTHESES set_expression RIGHT_PARENTHESES

   46 set_expression: expression IN expression

   47 expression: operation
   48           | expression COMMA operation
   49           | function_expression

   50 function_expression: set_statement
   51                    | function_call

   52 local_parameters: local_parameters COMMA local_parameter
   53                 | local_parameter
   54                 | %empty

   55 local_parameter: ID

   56 operation: arithmetic_operation
   57          | variable ASSIGN operation

   58 arithmetic_operation: logical_operation
   59                     | arithmetic_operation ADD_OP logical_operation
   60                     | arithmetic_operation SUB_OP logical_operation
   61                     | arithmetic_operation DIVIDE logical_operation
   62                     | arithmetic_operation MULT logical_operation

   63 logical_operation: relational_operation
   64                  | NEGATE logical_operation
   65                  | relational_operation AND logical_operation
   66                  | relational_operation OR logical_operation

   67 relational_operation: variable
   68                     | variable CLT relational_operation
   69                     | variable CLE relational_operation
   70                     | variable CEQ relational_operation
   71                     | variable CGE relational_operation
   72                     | variable CGT relational_operation
   73                     | variable CNE relational_operation

   74 variable: constant
   75         | QUOTES string QUOTES
   76         | ID

   77 string: STR

   78 constant: INTEGER
   79         | FLOAT
   80         | EMPTY


Terminais, com as regras onde eles aparecem

    $end (0) 0
    error (256)
    ID <strType> (258) 6 7 11 24 42 55 76
    EMPTY <strType> (259) 80
    TYPE <strType> (260) 6 7 11
    FLOAT <strType> (261) 79
    INTEGER <strType> (262) 78
    RETURN <strType> (263) 28 29
    IF <strType> (264) 34 35
    FOR <strType> (265) 36
    FORALL <strType> (266) 37
    ELSE <strType> (267) 35
    READ <strType> (268) 25
    WRITE <strType> (269) 26
    WRITELN <strType> (270) 27
    IS_SET <strType> (271) 42
    REMOVE <strType> (272) 43
    ADD <strType> (273) 44
    IN <strType> (274) 46
    STR <strType> (275) 77
    EXISTS <strType> (276) 45
    LEFT_CURLY_BRACKET <symbol> (277) 14
    RIGHT_CURLY_BRACKET <symbol> (278) 14
    LEFT_PARENTHESES <symbol> (279) 7 24 25 26 27 28 34 35 36 37 42 43 44 45
    RIGHT_PARENTHESES <symbol> (280) 7 24 25 26 27 28 34 35 36 37 42 43 44 45
    QUOTES <symbol> (281) 75
    SEMICOLON <symbol> (282) 6 18 21 22 23 28 29 33 36
    COMMA <symbol> (283) 8 48 52
    NEGATE <symbol> (284) 64
    AND <symbol> (285) 65
    OR <symbol> (286) 66
    ADD_OP <symbol> (287) 59
    SUB_OP <symbol> (288) 60
    DIVIDE <symbol> (289) 61
    MULT <symbol> (290) 62
    ASSIGN <symbol> (291) 57
    CLT <symbol> (292) 68
    CLE <symbol> (293) 69
    CEQ <symbol> (294) 70
    CGE <symbol> (295) 71
    CGT <symbol> (296) 72
    CNE <symbol> (297) 73
    THEN (298)


Não terminais com as regras onde eles aparecem

    $accept (44)
        à esquerda: 0
    program <stmt> (45)
        à esquerda: 1
        à direita: 0
    declarations <stmt> (46)
        à esquerda: 2 3
        à direita: 1 2
    declaration <stmt> (47)
        à esquerda: 4 5
        à direita: 2 3
    var_declaration <stmt> (48)
        à esquerda: 6
        à direita: 4 17
    func_declaration <stmt> (49)
        à esquerda: 7
        à direita: 5
    paramaters <stmt> (50)
        à esquerda: 8 9 10
        à direita: 7 8
    paramater <stmt> (51)
        à esquerda: 11
        à direita: 8 9
    block_struct <stmt> (52)
        à esquerda: 12 13
        à direita: 34 35 36 37
    compound_statement <stmt> (53)
        à esquerda: 14
        à direita: 7 12
    statement_list <stmt> (54)
        à esquerda: 15 16
        à direita: 14 15
    block_statement <stmt> (55)
        à esquerda: 17 18 19 20 21 22 23
        à direita: 13 15 16
    function_call <stmt> (56)
        à esquerda: 24
        à direita: 23 51
    input_statement <stmt> (57)
        à esquerda: 25
        à direita: 21
    output_statement <stmt> (58)
        à esquerda: 26 27
        à direita: 22
    return_statement <stmt> (59)
        à esquerda: 28 29
        à direita: 20
    statement <stmt> (60)
        à esquerda: 30 31 32
        à direita: 19
    expression_statement <stmt> (61)
        à esquerda: 33
        à direita: 30
    conditional_statement <stmt> (62)
        à esquerda: 34 35
        à direita: 31
    iteration_statement <stmt> (63)
        à esquerda: 36 37
        à direita: 32
    set_statement <stmt> (64)
        à esquerda: 38 39 40 41
        à direita: 18 50
    is_set_statement <stmt> (65)
        à esquerda: 42
        à direita: 38
    remove_statement <stmt> (66)
        à esquerda: 43
        à direita: 39
    add_statement <stmt> (67)
        à esquerda: 44
        à direita: 40
    exists_statement <stmt> (68)
        à esquerda: 45
        à direita: 41
    set_expression <stmt> (69)
        à esquerda: 46
        à direita: 37 43 44 45
    expression <stmt> (70)
        à esquerda: 47 48 49
        à direita: 28 29 33 34 35 36 46 48
    function_expression <stmt> (71)
        à esquerda: 50 51
        à direita: 49
    local_parameters <stmt> (72)
        à esquerda: 52 53 54
        à direita: 24 52
    local_parameter <stmt> (73)
        à esquerda: 55
        à direita: 52 53
    operation <stmt> (74)
        à esquerda: 56 57
        à direita: 47 48 57
    arithmetic_operation <stmt> (75)
        à esquerda: 58 59 60 61 62
        à direita: 56 59 60 61 62
    logical_operation <stmt> (76)
        à esquerda: 63 64 65 66
        à direita: 58 59 60 61 62 64 65 66
    relational_operation <stmt> (77)
        à esquerda: 67 68 69 70 71 72 73
        à direita: 63 65 66 68 69 70 71 72 73
    variable <stmt> (78)
        à esquerda: 74 75 76
        à direita: 25 26 27 57 67 68 69 70 71 72 73
    string <stmt> (79)
        à esquerda: 77
        à direita: 75
    constant <stmt> (80)
        à esquerda: 78 79 80
        à direita: 74


Estado 0

    0 $accept: • program $end

    TYPE  deslocar, e ir ao estado 1

    program           ir ao estado 2
    declarations      ir ao estado 3
    declaration       ir ao estado 4
    var_declaration   ir ao estado 5
    func_declaration  ir ao estado 6


Estado 1

    6 var_declaration: TYPE • ID SEMICOLON
    7 func_declaration: TYPE • ID LEFT_PARENTHESES paramaters RIGHT_PARENTHESES compound_statement

    ID  deslocar, e ir ao estado 7


Estado 2

    0 $accept: program • $end

    $end  deslocar, e ir ao estado 8


Estado 3

    1 program: declarations •
    2 declarations: declarations • declaration

    TYPE  deslocar, e ir ao estado 1

    $end  reduzir usando a regra 1 (program)

    declaration       ir ao estado 9
    var_declaration   ir ao estado 5
    func_declaration  ir ao estado 6


Estado 4

    3 declarations: declaration •

    $end  reduzir usando a regra 3 (declarations)
    TYPE  reduzir usando a regra 3 (declarations)


Estado 5

    4 declaration: var_declaration •

    $end  reduzir usando a regra 4 (declaration)
    TYPE  reduzir usando a regra 4 (declaration)


Estado 6

    5 declaration: func_declaration •

    $end  reduzir usando a regra 5 (declaration)
    TYPE  reduzir usando a regra 5 (declaration)


Estado 7

    6 var_declaration: TYPE ID • SEMICOLON
    7 func_declaration: TYPE ID • LEFT_PARENTHESES paramaters RIGHT_PARENTHESES compound_statement

    LEFT_PARENTHESES  deslocar, e ir ao estado 10
    SEMICOLON         deslocar, e ir ao estado 11


Estado 8

    0 $accept: program $end •

    $padrão  aceitar


Estado 9

    2 declarations: declarations declaration •

    $end  reduzir usando a regra 2 (declarations)
    TYPE  reduzir usando a regra 2 (declarations)


Estado 10

    7 func_declaration: TYPE ID LEFT_PARENTHESES • paramaters RIGHT_PARENTHESES compound_statement

    TYPE  deslocar, e ir ao estado 12

    RIGHT_PARENTHESES  reduzir usando a regra 10 (paramaters)
    COMMA              reduzir usando a regra 10 (paramaters)

    paramaters  ir ao estado 13
    paramater   ir ao estado 14


Estado 11

    6 var_declaration: TYPE ID SEMICOLON •

    $end  reduzir usando a regra 6 (var_declaration)
    TYPE  reduzir usando a regra 6 (var_declaration)


Estado 12

   11 paramater: TYPE • ID

    ID  deslocar, e ir ao estado 15


Estado 13

    7 func_declaration: TYPE ID LEFT_PARENTHESES paramaters • RIGHT_PARENTHESES compound_statement
    8 paramaters: paramaters • COMMA paramater

    RIGHT_PARENTHESES  deslocar, e ir ao estado 16
    COMMA              deslocar, e ir ao estado 17


Estado 14

    9 paramaters: paramater •

    RIGHT_PARENTHESES  reduzir usando a regra 9 (paramaters)
    COMMA              reduzir usando a regra 9 (paramaters)


Estado 15

   11 paramater: TYPE ID •

    RIGHT_PARENTHESES  reduzir usando a regra 11 (paramater)
    COMMA              reduzir usando a regra 11 (paramater)


Estado 16

    7 func_declaration: TYPE ID LEFT_PARENTHESES paramaters RIGHT_PARENTHESES • compound_statement

    LEFT_CURLY_BRACKET  deslocar, e ir ao estado 18

    compound_statement  ir ao estado 19


Estado 17

    8 paramaters: paramaters COMMA • paramater

    TYPE  deslocar, e ir ao estado 12

    paramater  ir ao estado 20


Estado 18

   14 compound_statement: LEFT_CURLY_BRACKET • statement_list RIGHT_CURLY_BRACKET

    ID       deslocar, e ir ao estado 21
    EMPTY    deslocar, e ir ao estado 22
    TYPE     deslocar, e ir ao estado 23
    FLOAT    deslocar, e ir ao estado 24
    INTEGER  deslocar, e ir ao estado 25
    RETURN   deslocar, e ir ao estado 26
    IF       deslocar, e ir ao estado 27
    FOR      deslocar, e ir ao estado 28
    FORALL   deslocar, e ir ao estado 29
    READ     deslocar, e ir ao estado 30
    WRITE    deslocar, e ir ao estado 31
    WRITELN  deslocar, e ir ao estado 32
    IS_SET   deslocar, e ir ao estado 33
    REMOVE   deslocar, e ir ao estado 34
    ADD      deslocar, e ir ao estado 35
    EXISTS   deslocar, e ir ao estado 36
    QUOTES   deslocar, e ir ao estado 37
    NEGATE   deslocar, e ir ao estado 38

    var_declaration        ir ao estado 39
    statement_list         ir ao estado 40
    block_statement        ir ao estado 41
    function_call          ir ao estado 42
    input_statement        ir ao estado 43
    output_statement       ir ao estado 44
    return_statement       ir ao estado 45
    statement              ir ao estado 46
    expression_statement   ir ao estado 47
    conditional_statement  ir ao estado 48
    iteration_statement    ir ao estado 49
    set_statement          ir ao estado 50
    is_set_statement       ir ao estado 51
    remove_statement       ir ao estado 52
    add_statement          ir ao estado 53
    exists_statement       ir ao estado 54
    expression             ir ao estado 55
    function_expression    ir ao estado 56
    operation              ir ao estado 57
    arithmetic_operation   ir ao estado 58
    logical_operation      ir ao estado 59
    relational_operation   ir ao estado 60
    variable               ir ao estado 61
    constant               ir ao estado 62


Estado 19

    7 func_declaration: TYPE ID LEFT_PARENTHESES paramaters RIGHT_PARENTHESES compound_statement •

    $end  reduzir usando a regra 7 (func_declaration)
    TYPE  reduzir usando a regra 7 (func_declaration)


Estado 20

    8 paramaters: paramaters COMMA paramater •

    RIGHT_PARENTHESES  reduzir usando a regra 8 (paramaters)
    COMMA              reduzir usando a regra 8 (paramaters)


Estado 21

   24 function_call: ID • LEFT_PARENTHESES local_parameters RIGHT_PARENTHESES
   76 variable: ID •

    LEFT_PARENTHESES  deslocar, e ir ao estado 63

    SEMICOLON  reduzir usando a regra 76 (variable)
    COMMA      reduzir usando a regra 76 (variable)
    AND        reduzir usando a regra 76 (variable)
    OR         reduzir usando a regra 76 (variable)
    ADD_OP     reduzir usando a regra 76 (variable)
    SUB_OP     reduzir usando a regra 76 (variable)
    DIVIDE     reduzir usando a regra 76 (variable)
    MULT       reduzir usando a regra 76 (variable)
    ASSIGN     reduzir usando a regra 76 (variable)
    CLT        reduzir usando a regra 76 (variable)
    CLE        reduzir usando a regra 76 (variable)
    CEQ        reduzir usando a regra 76 (variable)
    CGE        reduzir usando a regra 76 (variable)
    CGT        reduzir usando a regra 76 (variable)
    CNE        reduzir usando a regra 76 (variable)


Estado 22

   80 constant: EMPTY •

    SEMICOLON  reduzir usando a regra 80 (constant)
    COMMA      reduzir usando a regra 80 (constant)
    AND        reduzir usando a regra 80 (constant)
    OR         reduzir usando a regra 80 (constant)
    ADD_OP     reduzir usando a regra 80 (constant)
    SUB_OP     reduzir usando a regra 80 (constant)
    DIVIDE     reduzir usando a regra 80 (constant)
    MULT       reduzir usando a regra 80 (constant)
    ASSIGN     reduzir usando a regra 80 (constant)
    CLT        reduzir usando a regra 80 (constant)
    CLE        reduzir usando a regra 80 (constant)
    CEQ        reduzir usando a regra 80 (constant)
    CGE        reduzir usando a regra 80 (constant)
    CGT        reduzir usando a regra 80 (constant)
    CNE        reduzir usando a regra 80 (constant)


Estado 23

    6 var_declaration: TYPE • ID SEMICOLON

    ID  deslocar, e ir ao estado 64


Estado 24

   79 constant: FLOAT •

    SEMICOLON  reduzir usando a regra 79 (constant)
    COMMA      reduzir usando a regra 79 (constant)
    AND        reduzir usando a regra 79 (constant)
    OR         reduzir usando a regra 79 (constant)
    ADD_OP     reduzir usando a regra 79 (constant)
    SUB_OP     reduzir usando a regra 79 (constant)
    DIVIDE     reduzir usando a regra 79 (constant)
    MULT       reduzir usando a regra 79 (constant)
    ASSIGN     reduzir usando a regra 79 (constant)
    CLT        reduzir usando a regra 79 (constant)
    CLE        reduzir usando a regra 79 (constant)
    CEQ        reduzir usando a regra 79 (constant)
    CGE        reduzir usando a regra 79 (constant)
    CGT        reduzir usando a regra 79 (constant)
    CNE        reduzir usando a regra 79 (constant)


Estado 25

   78 constant: INTEGER •

    SEMICOLON  reduzir usando a regra 78 (constant)
    COMMA      reduzir usando a regra 78 (constant)
    AND        reduzir usando a regra 78 (constant)
    OR         reduzir usando a regra 78 (constant)
    ADD_OP     reduzir usando a regra 78 (constant)
    SUB_OP     reduzir usando a regra 78 (constant)
    DIVIDE     reduzir usando a regra 78 (constant)
    MULT       reduzir usando a regra 78 (constant)
    ASSIGN     reduzir usando a regra 78 (constant)
    CLT        reduzir usando a regra 78 (constant)
    CLE        reduzir usando a regra 78 (constant)
    CEQ        reduzir usando a regra 78 (constant)
    CGE        reduzir usando a regra 78 (constant)
    CGT        reduzir usando a regra 78 (constant)
    CNE        reduzir usando a regra 78 (constant)


Estado 26

   28 return_statement: RETURN • LEFT_PARENTHESES expression RIGHT_PARENTHESES SEMICOLON
   29                 | RETURN • expression SEMICOLON

    ID                deslocar, e ir ao estado 21
    EMPTY             deslocar, e ir ao estado 22
    FLOAT             deslocar, e ir ao estado 24
    INTEGER           deslocar, e ir ao estado 25
    IS_SET            deslocar, e ir ao estado 33
    REMOVE            deslocar, e ir ao estado 34
    ADD               deslocar, e ir ao estado 35
    EXISTS            deslocar, e ir ao estado 36
    LEFT_PARENTHESES  deslocar, e ir ao estado 65
    QUOTES            deslocar, e ir ao estado 37
    NEGATE            deslocar, e ir ao estado 38

    function_call         ir ao estado 66
    set_statement         ir ao estado 67
    is_set_statement      ir ao estado 51
    remove_statement      ir ao estado 52
    add_statement         ir ao estado 53
    exists_statement      ir ao estado 54
    expression            ir ao estado 68
    function_expression   ir ao estado 56
    operation             ir ao estado 57
    arithmetic_operation  ir ao estado 58
    logical_operation     ir ao estado 59
    relational_operation  ir ao estado 60
    variable              ir ao estado 61
    constant              ir ao estado 62


Estado 27

   34 conditional_statement: IF • LEFT_PARENTHESES expression RIGHT_PARENTHESES block_struct
   35                      | IF • LEFT_PARENTHESES expression RIGHT_PARENTHESES block_struct ELSE block_struct

    LEFT_PARENTHESES  deslocar, e ir ao estado 69


Estado 28

   36 iteration_statement: FOR • LEFT_PARENTHESES expression SEMICOLON expression SEMICOLON expression RIGHT_PARENTHESES block_struct

    LEFT_PARENTHESES  deslocar, e ir ao estado 70


Estado 29

   37 iteration_statement: FORALL • LEFT_PARENTHESES set_expression RIGHT_PARENTHESES block_struct

    LEFT_PARENTHESES  deslocar, e ir ao estado 71


Estado 30

   25 input_statement: READ • LEFT_PARENTHESES variable RIGHT_PARENTHESES

    LEFT_PARENTHESES  deslocar, e ir ao estado 72


Estado 31

   26 output_statement: WRITE • LEFT_PARENTHESES variable RIGHT_PARENTHESES

    LEFT_PARENTHESES  deslocar, e ir ao estado 73


Estado 32

   27 output_statement: WRITELN • LEFT_PARENTHESES variable RIGHT_PARENTHESES

    LEFT_PARENTHESES  deslocar, e ir ao estado 74


Estado 33

   42 is_set_statement: IS_SET • LEFT_PARENTHESES ID RIGHT_PARENTHESES

    LEFT_PARENTHESES  deslocar, e ir ao estado 75


Estado 34

   43 remove_statement: REMOVE • LEFT_PARENTHESES set_expression RIGHT_PARENTHESES

    LEFT_PARENTHESES  deslocar, e ir ao estado 76


Estado 35

   44 add_statement: ADD • LEFT_PARENTHESES set_expression RIGHT_PARENTHESES

    LEFT_PARENTHESES  deslocar, e ir ao estado 77


Estado 36

   45 exists_statement: EXISTS • LEFT_PARENTHESES set_expression RIGHT_PARENTHESES

    LEFT_PARENTHESES  deslocar, e ir ao estado 78


Estado 37

   75 variable: QUOTES • string QUOTES

    STR  deslocar, e ir ao estado 79

    string  ir ao estado 80


Estado 38

   64 logical_operation: NEGATE • logical_operation

    ID       deslocar, e ir ao estado 81
    EMPTY    deslocar, e ir ao estado 164
    FLOAT    deslocar, e ir ao estado 165
    INTEGER  deslocar, e ir ao estado 166
    QUOTES   deslocar, e ir ao estado 167
    NEGATE   deslocar, e ir ao estado 38

    logical_operation     ir ao estado 82
    relational_operation  ir ao estado 60
    variable              ir ao estado 83
    constant              ir ao estado 168


Estado 39

   17 block_statement: var_declaration •
